DEBUG: result div visibility fixed and add left margin input

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ body{
   margin-bottom:1rem;
   margin-top:1rem;
   background-color: rgba(124, 170, 255, 0.8);
+  visibility:hidden;
 }
 
 
@@ -47,9 +48,14 @@ button{
   margin-bottom: 1rem;
   margin-top: 1rem;
 }
-
+label{
+  margin-left:1rem;
+  font-weight:450;
+}
+input{
+  margin-right: .5rem;
+}
 .question{
-
   width:90%;
   margin-left:auto;
   margin-right:auto;
